Bug 97425 - First scroll event after enabling edge-scrolling is ignored
Summary: First scroll event after enabling edge-scrolling is ignored
Status: RESOLVED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: libinput (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-08-21 07:22 UTC by Sebastian Keller
Modified: 2016-08-22 21:23 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Sebastian Keller 2016-08-21 07:22:11 UTC
So far I've only been able to reproduce this under X + gnome-shell as I couldn't get edge-scrolling to work under wayland + gnome-shell.

To reproduce the bug first make sure 2-finger-scrolling is enabled and edge-scrolling disabled. Then switch to edge-scrolling (using xinput or the native gnome settings in >= 3.21.90) and try to scroll. This results in the following error message and the scroll event being ignored:

(EE) libinput bug: unexpected scroll event 0 in area state

Only the first scroll event after switching is affected. This can be repeated by switching to 2-finger-scrolling and back again.
Comment 2 Peter Hutterer 2016-08-22 21:23:07 UTC
commit b1a811ee521dc56ed5d1c789251fad245b758a80
Author: Peter Hutterer <peter.hutterer@who-t.net>
Date:   Mon Aug 22 16:06:59 2016 +1000

    touchpad: reset the edge scroll state on touch up if edge scroll is disabled


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.